Prevented a scrollbar appearing around the main body content by overriding the 'mdl-layout__content' class overflow values

--- a/stuajnht-wp-mdl/style.css
+++ b/stuajnht-wp-mdl/style.css
@@ -51,6 +51,7 @@ blockquote > p {
 
 .mdl-layout__content {
   width: 100%;
+  overflow: visible;
 }
 
 .mdl-data-table th, .mdl-data-table td {
